fix: overflow errors

--- a/website/src/App.css
+++ b/website/src/App.css
@@ -1,14 +1,12 @@
+
+
 .App {
   text-align: center;
 }
 
 .App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-logo {
     animation: App-logo-spin infinite 20s linear;
+    width: 10rem
 }
 
 .App-header {
